make login page only appear once user has logged in

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Twitter</string>
+    <string name="title_activity_twitter_grid_activty">TwitterGridActivty</string>
 </resources>
