added detailed detail view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Twitter</string>
-    <string name="title_activity_twitter_grid_activty">TwitterGridActivty</string>
+    <string name="app_name">Reddit</string>
+    <string name="title_activity_reddit_grid_activty">RedditGridActivty</string>
     <string name="title_activity_reddit_detailed">RedditDetailedActivity</string>
 </resources>
